--- a/source/selectomaticEg.html
+++ b/source/selectomaticEg.html
@@ -11,17 +11,17 @@
 <fieldset>
 <legend>numbers</legend>
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange(this)" name="numbers" value="number1"></input>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="numbers" value="number1"></input>
 number1
 </label>
 
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange(this)" name="numbers" value="number2"></input>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="numbers" value="number2"></input>
 number2
 </label>
 
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange(this)" name="numbers" value="number3"></input>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="numbers" value="number3"></input>
 number3
 </label>
 
@@ -29,17 +29,17 @@ number3
 <fieldset>
 <legend>rows</legend>
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange(this)" name="rows" value="col1"></input>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="rows" value="col1"></input>
 col1
 </label>
 
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange(this)" name="rows" value="col2"></input>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="rows" value="col2"></input>
 col2
 </label>
 
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange(this)" name="rows" value="col3"></input>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="rows" value="col3"></input>
 col3
 </label>
 
@@ -47,32 +47,32 @@ col3
 <fieldset>
 <legend>rowsXnumbers</legend>
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange(this)" name="rowsXnumbers" value="col1"></input>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="rowsXnumbers" value="col1"></input>
 col1
 </label>
 
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange(this)" name="rowsXnumbers" value="col2"></input>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="rowsXnumbers" value="col2"></input>
 col2
 </label>
 
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange(this)" name="rowsXnumbers" value="col3"></input>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="rowsXnumbers" value="col3"></input>
 col3
 </label>
 
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange(this)" name="rowsXnumbers" value="number1"></input>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="rowsXnumbers" value="number1"></input>
 number1
 </label>
 
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange(this)" name="rowsXnumbers" value="number2"></input>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="rowsXnumbers" value="number2"></input>
 number2
 </label>
 
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange(this)" name="rowsXnumbers" value="number3"></input>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="rowsXnumbers" value="number3"></input>
 number3
 </label>
 
@@ -81,16 +81,18 @@ number3
 
 
 <script type="text/javascript">
-function doFieldChange(couldBeAnything)
+function doFieldChange()
 {
-    // console.log (couldBeAnything.name + " " + couldBeAnything.value + " " + couldBeAnything.checked);
     selectoInputs = document.getElementsByClassName("selectomaticInput");
     var fieldList = "";
     var fieldCount = 0;
-    for (var i = 0; i < selectoInputs.length; i += 1) 
+    let tableSet = new Set();
+    var i;
+    for (i = 0; i < selectoInputs.length; i += 1) 
     {
         if (selectoInputs[i].type == "checkbox")
         {
+            // console.log(selectoInputs[i]);
             if (selectoInputs[i].checked)
             {
                 if (fieldCount > 0)
@@ -99,10 +101,28 @@ function doFieldChange(couldBeAnything)
                 }
                 fieldCount++;
                 fieldList += selectoInputs[i].name + "." + selectoInputs[i].value;
+                tableSet.add(selectoInputs[i].name);
             }
         }
     }
     console.log(fieldList);
+    console.log(tableSet);
+    var tableArr = [...tableSet]; // Sets seemingly write only...
+    var tableStr = "";
+    for (i = 0; i < tableArr.length; i++) 
+    {
+        if (i > 0)
+        {
+            tableStr += ",";
+        }
+        tableStr += tableArr[i];
+    }
+
+    var selectStr = "SELECT " + fieldList + " FROM " + tableStr + ";";
+    console.log(selectStr);
+
+    thingy = document.getElementById("sqlText");
+    thingy.innerHTML = selectStr;
 }
 </script>
 
