using release2017_09-11.db

--- a/source/batch/selectomatic.html
+++ b/source/batch/selectomatic.html
@@ -9,71 +9,221 @@
 <h2>Selectomatic!</h2>
 <h3>your user friendly interactive field selector for <code>example.db</code></h3>
 <fieldset style="display: inline;">
-<legend>numbers</legend>
+<legend>allOrgs</legend>
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="numbers" value="number1"></input>
-number1
-</label>
-
-<label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="numbers" value="number2"></input>
-number2
-</label>
-
-<label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="numbers" value="number3"></input>
-number3
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="allOrgs" value="Organisation"></input>
+Organisation
 </label>
 
 </fieldset><br/>
 <fieldset style="display: inline;">
-<legend>rows</legend>
+<legend>orgCheck</legend>
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="rows" value="col1"></input>
-col1
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="orgCheck" value="releaseID"></input>
+releaseID
 </label>
 
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="rows" value="col2"></input>
-col2
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="orgCheck" value="NICNumber"></input>
+NICNumber
 </label>
 
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="rows" value="col3"></input>
-col3
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="orgCheck" value="RefNumber"></input>
+RefNumber
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="orgCheck" value="releaseOrganisation"></input>
+releaseOrganisation
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="orgCheck" value="purposeOrganisation"></input>
+purposeOrganisation
 </label>
 
 </fieldset><br/>
 <fieldset style="display: inline;">
-<legend>rowsXnumbers</legend>
+<legend>purposes</legend>
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="rowsXnumbers" value="col1"></input>
-col1
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="purposes" value="Key"></input>
+Key
 </label>
 
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="rowsXnumbers" value="col2"></input>
-col2
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="purposes" value="RefNumber"></input>
+RefNumber
 </label>
 
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="rowsXnumbers" value="col3"></input>
-col3
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="purposes" value="Organisation"></input>
+Organisation
 </label>
 
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="rowsXnumbers" value="number1"></input>
-number1
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="purposes" value="Objective"></input>
+Objective
 </label>
 
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="rowsXnumbers" value="number2"></input>
-number2
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="purposes" value="ProcessingActivities"></input>
+ProcessingActivities
 </label>
 
 <label>
-<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="rowsXnumbers" value="number3"></input>
-number3
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="purposes" value="ExpectedOutput"></input>
+ExpectedOutput
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="purposes" value="ExpectedBenefits"></input>
+ExpectedBenefits
+</label>
+
+</fieldset><br/>
+<fieldset style="display: inline;">
+<legend>releases</legend>
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="releases" value="RowID"></input>
+RowID
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="releases" value="OrganisationName"></input>
+OrganisationName
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="releases" value="us"></input>
+us
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="releases" value="DataProvided"></input>
+DataProvided
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="releases" value="Sensitive"></input>
+Sensitive
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="releases" value="LegalBasisForProvision"></input>
+LegalBasisForProvision
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="releases" value="Purpose"></input>
+Purpose
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="releases" value="OneOff"></input>
+OneOff
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="releases" value="NICNumber"></input>
+NICNumber
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="releases" value="MRNumber"></input>
+MRNumber
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="releases" value="PatientOptOutsApplied"></input>
+PatientOptOutsApplied
+</label>
+
+</fieldset><br/>
+<fieldset style="display: inline;">
+<legend>sectionMarkdown</legend>
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="sectionMarkdown" value="id"></input>
+id
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="sectionMarkdown" value="markdown"></input>
+markdown
+</label>
+
+</fieldset><br/>
+<fieldset style="display: inline;">
+<legend>sections</legend>
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="sections" value="id"></input>
+id
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="sections" value="title"></input>
+title
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="sections" value="blurb"></input>
+blurb
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="sections" value="sql"></input>
+sql
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="sections" value="seq"></input>
+seq
+</label>
+
+</fieldset><br/>
+<fieldset style="display: inline;">
+<legend>subSectionMarkdown</legend>
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="subSectionMarkdown" value="parentId"></input>
+parentId
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="subSectionMarkdown" value="id"></input>
+id
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="subSectionMarkdown" value="markdown"></input>
+markdown
+</label>
+
+</fieldset><br/>
+<fieldset style="display: inline;">
+<legend>subSections</legend>
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="subSections" value="parentId"></input>
+parentId
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="subSections" value="id"></input>
+id
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="subSections" value="title"></input>
+title
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="subSections" value="blurb"></input>
+blurb
+</label>
+
+<label>
+<input class="selectomaticInput" type="checkbox" onclick="doFieldChange()" name="subSections" value="sql"></input>
+sql
 </label>
 
 </fieldset><br/>
